feat: add article filtering by initiation date and chronological processing

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ RSS_FETCH_INTERVAL=30m
 RSS_FEEDS_FILE=/app/feeds.txt
 LOG_LEVEL=info
 
+# Initiation date - articles published before this date will be ignored
+# Format: YYYY-MM-DD or YYYY-MM-DDTHH:MM:SSZ
+# Default: 2020-01-01 (if not specified)
+APP_INITIATION_DATE=2025-05-31
+
 # =============================================================================
 # API CONFIGURATION
 # =============================================================================
