feat: implement article cutoff date filtering and update related configurations

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,11 @@ LOG_LEVEL=info
 # Default: 2020-01-01 (if not specified)
 APP_INITIATION_DATE=2025-05-31
 
+# Article cutoff date - only articles published on or after this date will be processed
+# Format: YYYY-MM-DD or YYYY-MM-DDTHH:MM:SSZ
+# Default: 2025-05-31T00:00:00Z (articles published from May 31, 2025 onwards)
+ARTICLE_CUTOFF_DATE=2025-05-31T00:00:00Z
+
 # =============================================================================
 # API CONFIGURATION
 # =============================================================================
@@ -105,6 +110,16 @@ HTTP_IDLE_TIMEOUT=60s
 # =============================================================================
 MAX_SUMMARY_LENGTH=200
 CONTENT_HASH_ALGORITHM=sha256
+
+# =============================================================================
+# SUMMARIZATION SCHEDULER CONFIGURATION
+# =============================================================================
+SUMMARIZATION_MAX_QUEUE_SIZE=100
+SUMMARIZATION_WORKER_TIMEOUT=120s
+SUMMARIZATION_MAX_RETRIES=3
+SUMMARIZATION_RETRY_BACKOFF_BASE=1s
+SUMMARIZATION_METRICS_INTERVAL=10s
+SUMMARIZATION_QUEUE_PURGE_TIMEOUT=1h
 
 # =============================================================================
 # PRODUCTION SECURITY NOTES
